--- a/index.html
+++ b/index.html
@@ -269,9 +269,6 @@
             owl-carousel-light-init-fadeIn
             owl-theme
             manual
-            dots-inside dots-horizontal-center
-            show-dots-hover
-            dots-light
             nav-style-1
             nav-inside
             nav-inside-plus
@@ -281,7 +278,7 @@
             show-nav-hover
             mb-0
           "
-          data-plugin-options="{'autoplayTimeout': 7000}"
+          data-plugin-options="{'autoplayTimeout': 70000}"
           data-dynamic-height="['650px','650px','650px','550px','500px']"
           style="height: 650px"
         >
@@ -296,7 +293,7 @@
                 "
                 data-dynamic-height="['650px','650px','650px','550px','500px']"
                 style="
-                  background-image: url(img/slides/slide-corporate-6-1.jpg);
+                  background-image: url(https://source.unsplash.com/random);
                   background-size: cover;
                   background-position: center;
                 "
@@ -328,7 +325,7 @@
                           data-appear-animation-delay="500"
                           data-plugin-options="{'minWindowWidth': 0}"
                         >
-                          PORTO TEMPLATE
+                          Time to Play
                         </h1>
                         <p
                           class="
@@ -341,7 +338,8 @@
                           data-plugin-animated-letters
                           data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0, 'animationSpeed': 30}"
                         >
-                          Trusted by over 40,000 satisfied users.
+                          Kickbud is your perfect companion for an enjoyable
+                          evening.
                         </p>
                         <a
                           href="#"
@@ -357,7 +355,7 @@
                           data-appear-animation="fadeInUpShorter"
                           data-appear-animation-delay="1800"
                           data-plugin-options="{'minWindowWidth': 0}"
-                          >GEST STARTED NOW!</a
+                          >Buy Now!</a
                         >
                       </div>
                     </div>
@@ -366,7 +364,7 @@
               </div>
 
               <!-- Carousel Slide 2 -->
-              <div
+              <!-- <div
                 class="
                   owl-item
                   position-relative
@@ -374,7 +372,7 @@
                 "
                 data-dynamic-height="['650px','650px','650px','550px','500px']"
                 style="
-                  background-image: url(img/slides/slide-corporate-2-1.jpg);
+                  background-image: url(https://source.unsplash.com/random);
                   background-size: cover;
                   background-position: center;
                 "
@@ -425,7 +423,7 @@
                               alt=""
                             />
                           </span>
-                          HELLO, THIS IS
+
                           <span
                             class="
                               position-absolute
@@ -457,9 +455,7 @@
                           data-appear-animation="blurIn"
                           data-appear-animation-delay="500"
                           data-plugin-options="{'minWindowWidth': 0}"
-                        >
-                          PORTO HTML TEMPLATE
-                        </h1>
+                        ></h1>
                         <p
                           class="
                             text-4-5 text-color-light
@@ -470,9 +466,7 @@
                           "
                           data-plugin-animated-letters
                           data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0, 'animationSpeed': 30}"
-                        >
-                          Trusted by over 40,000 satisfied users.
-                        </p>
+                        ></p>
                         <a
                           href="#"
                           class="
@@ -487,19 +481,18 @@
                           data-appear-animation="fadeInUpShorter"
                           data-appear-animation-delay="1800"
                           data-plugin-options="{'minWindowWidth': 0}"
-                          >GEST STARTED NOW!</a
-                        >
+                        ></a>
                       </div>
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
-          <div class="owl-dots mb-5">
+          <!-- <div class="owl-dots mb-5">
             <button role="button" class="owl-dot active"><span></span></button>
             <button role="button" class="owl-dot"><span></span></button>
-          </div>
+          </div> -->
         </div>
 
         <!-- FIRST IN Z -->
