--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             show-nav-hover
             mb-0
           "
-          data-plugin-options="{'autoplayTimeout': 70000}"
+          data-plugin-options="{'autoplayTimeout': 900000}"
           data-dynamic-height="['650px','650px','650px','550px','500px']"
           style="height: 650px"
         >
@@ -869,7 +869,7 @@
               <div class="col">
                 <div
                   class="owl-carousel custom-dots-style-1 dots-dark mb-0"
-                  data-plugin-options="{'responsive': {'576': {'items': 1}, '768': {'items': 1}, '992': {'items': 2}, '1200': {'items': 2}}, 'autoplay': true, 'autoplayTimeout': 7000, 'loop': true, 'dots': true, 'nav': false}"
+                  data-plugin-options="{'responsive': {'576': {'items': 1}, '768': {'items': 1}, '992': {'items': 2}, '1200': {'items': 2}}, 'autoplay': false, 'autoplayTimeout': 7000, 'loop': false, 'dots': false, 'nav': false,}"
                 >
                   <div>
                     <div
