--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
                                 text-color-dark
                                 opacity-9
                               "
-                              >Ritika Sharma</strong
+                              >Ajit Sharma</strong
                             >
                           </p>
                         </div>
