--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                         "
                         data-item-id="1"
                         data-item-price="499"
-                        data-item-url="/"
+                        data-item-url="https://kickbud1.netlify.app/"
                         data-item-name="Kickbud"
                         data-item-image="https://raw.githubusercontent.com/alabhyajindal/kickbud/main/product.jpg"
                         data-item-description="The Kickbud arrives in an easy to carry package. Play with friends, family or teammates anywhere, anytime. "
