--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
                         data-item-price="499"
                         data-item-url="https://kickbud1.netlify.app/"
                         data-item-name="Kickbud"
-                        data-item-image="https://raw.githubusercontent.com/alabhyajindal/kickbud/main/product.jpg"
+                        data-item-image="product.jpg"
                         data-item-description="The Kickbud arrives in an easy to carry package. Play with friends, family or teammates anywhere, anytime. "
                       >
                         Buy Now
