taking snipcart live

--- a/index.html
+++ b/index.html
@@ -1457,8 +1457,12 @@
     <div
       hidden
       id="snipcart"
-      data-api-key="MmE1Y2Q4NDItYzgxOC00ZGRiLWE2ZGMtZjA4MzA5OWY0YzY5NjM3NzEwOTc3MTczMzcxODU2"
+      data-api-key="ZDIyMzAzY2MtM2JkMy00YjNmLWFhZDQtNDdhYmQ3NzljZDlmNjM3NzEwOTc3MTczMzcxODU2"
     ></div>
+  <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.2.2/default/snipcart.css" />
+<script async src="https://cdn.snipcart.com/themes/v3.2.2/default/snipcart.js"></script>
+<div id="snipcart" data-config-modal-style="side" data-api-key="ZDIyMzAzY2MtM2JkMy00YjNmLWFhZDQtNDdhYmQ3NzljZDlmNjM3NzEwOTc3MTczMzcxODU2" hidden></div>
+
 
     <!-- Ionicons -->
 
