--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@
                           snipcart-add-item
                         "
                         data-item-id="1"
-                        data-item-price="499"
-                        data-item-url="https://kickbud1.netlify.app/"
+                        data-item-price="1"
+                        data-item-url="https://kickbud.netlify.app/"
                         data-item-name="Kickbud"
                         data-item-image="https://i.ibb.co/gzG19s6/product.jpg"
                         data-item-description="The Kickbud arrives in an easy to carry package. Play with friends, family or teammates anywhere, anytime. "
